log/build_2025-11-30_23-39-16/shutter_lineup/stderr.log
  File "/home/eyi3/ros2_ws/src/shutter_lineup/install/shutter_lineup/lib/python3.12/site-packages/shutter_lineup/virtual_camera.py", line 27
    if 
       ^
SyntaxError: invalid syntax

